--- a/webpages/styles.css
+++ b/webpages/styles.css
@@ -1,4 +1,19 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+
 body {
-	background: blue;
+	background: #111;
 	color: white;
+	font-family: Oswald, sans-serif;
+}
+
+#choiceHolder h1 {
+	width: 100%;
+	height: 48vh;
+    text-align: center;
+    line-height: 48vh;
+    font-size: 4em;
+    letter-spacing: .05em;
 }
